Get deploys (#20)
* Fix get deploys response

* Update API docs

* Remove useless imports

* Update /deploys response

* Update API docs

* Update /deploys to get cluster ip

* Add deploy name to response

* Update get deploys response

* Fix naming pattern

* Fix list_runs pagination

* Fix component build

* Add env variables to SeldonDeployment

* Remove experiment_id from seldon parameters

* Add exception to connection fail

* Fix cluster config loading

* Add RUN_ID to training container
