# docs/swagger.yaml
@@ -11,35 +11,35 @@ info:
 servers:
   - url: http://localhost:8080
 tags:
-  - name: "Deploy"
+  - name: "Deployment"
     description: >
-      Deploy is an inference notebook.
-  - name: "Train"
+      Manage deployment notebooks.
+  - name: "Training"
     description: >
-      Train is a training notebook.
+      Manage training notebooks.
 paths:
-  /deploys:
+  /deployments:
     get:
-      summary: "List all deploys."
+      summary: "List all deployments."
       tags:
-        - "Deploy"
+        - "Deployment"
       responses:
         "200":
-          $ref: "#/components/responses/Runs"
+          $ref: "#/components/responses/Deployments"
         "500":
           $ref: "#/components/responses/InternalServerError"
         "503":
           $ref: "#/components/responses/ServiceUnavailable"
-  /deploy:
+  /deployment:
     post:
       summary: "Run a deployment pipeline"
       tags:
-        - "Deploy"
+        - "Deployment"
       requestBody:
-        $ref: "#/components/requestBodies/DeployPost"
+        $ref: "#/components/requestBodies/DeploymentPost"
       responses:
         "200":
-          $ref: "#/components/responses/Runs"
+          $ref: "#/components/responses/Run"
         "400":
           $ref: "#/components/responses/BadRequest"
         "500":
@@ -50,7 +50,7 @@ paths:
     get:
       summary: "Get logs from deployment."
       tags:
-        - "Deploy"
+        - "Deployment"
       parameters:
         - name: name
           in: query
@@ -59,16 +59,16 @@ paths:
             type: string
       responses:
         "200":
-          $ref: "#/components/responses/DeployLog"
+          $ref: "#/components/responses/DeploymentLog"
         "500":
           $ref: "#/components/responses/InternalServerError"
         "503":
           $ref: "#/components/responses/ServiceUnavailable"
-  /train/<run_id>:
+  /training/<run_id>:
     get:
-      summary: "Get the run status."
+      summary: "Get the training run status."
       tags:
-        - "Train"
+        - "Training"
       parameters:
         - name: run_id
           in: path
@@ -77,23 +77,23 @@ paths:
             type: string
       responses:
         "200":
-          $ref: "#/components/responses/RunDetail"
+          $ref: "#/components/responses/TrainingStatus"
         "400":
           $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/InternalServerError"
         "503":
           $ref: "#/components/responses/ServiceUnavailable"
-  /train:
+  /training:
     post:
-      summary: "Run a train pipeline"
+      summary: "Run a training pipeline"
       tags:
-        - "Train"
+        - "Training"
       requestBody:
-        $ref: "#/components/requestBodies/TrainPost"
+        $ref: "#/components/requestBodies/TrainingPost"
       responses:
         "200":
-          $ref: "#/components/responses/Runs"
+          $ref: "#/components/responses/Run"
         "400":
           $ref: "#/components/responses/BadRequest"
         "500":
@@ -102,16 +102,35 @@ paths:
           $ref: "#/components/responses/ServiceUnavailable"
 components:
   schemas:
-    Artifact:
+    Run:
       type: object
       properties:
+        message:
+          type: string
+          example: "Pipeline running."
+        runId:
+          type: string
+          format: uuid
+    Deployments:
+      type: array
+      items:
+        $ref: "#/components/schemas/DeploymentStatus"
+    DeploymentStatus:
+      type: object
+      properties:
+        experimentId:
+          type: string
+          format: uuid
         name:
           type: string
-        optional:
-          type: boolean
-        path:
-          type: object
-    DeployLog:
+        status:
+          type: string
+        url:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+    DeploymentLog:
       type: array
       items:
         type: object
@@ -132,268 +151,18 @@ components:
           type: string
         timestamp:
           type: string
-    Parameter:
+    TrainingStatus:
       type: object
       properties:
-        name:
-          type: string
-        value:
-          type: string
-        valueFrom:
-          type: object
-    Template:
-      type: object
-      properties:
-        dag:
-          type: object
-          properties:
-            tasks:
-              type: array
-              items:
-                type: object
-                properties:
-                  arguments:
-                    type: object
-                    properties:
-                      parameters:
-                        type: array
-                        items:
-                          oneOf:
-                            - $ref: "#/components/schemas/Parameter"
-                  dependencies:
-                    type: array
-                    items:
-                      type: string
-                  name:
-                    type: string
-                  template:
-                    type: string
-        container:
-          type: object
-          properties:
-            command:
-              type: array
-              items:
-                type: string
-            image:
-              type: string
-            imagePullPolicy:
-              type: string
-            name:
-              type: string
-            resources:
-              type: object
-        inputs:
-          type: object
-          properties:
-            parameters:
-              type: array
-              items:
-                oneOf:
-                  - $ref: "#/components/schemas/Parameter"
-        metadata:
-          type: string
-        name:
-          type: string
-        outputs:
-          type: object
-          properties:
-            artifacts:
-              type: array
-              items:
-                oneOf:
-                  - $ref: "#/components/schemas/Artifact"
-            parameters:
-              type: array
-              items:
-                oneOf:
-                  - $ref: "#/components/schemas/Parameter"
-        resource:
-          type: object
-          properties:
-            action:
-              type: string
-            manifest:
-              type: string
-            successCondition:
-              type: string
-    Spec:
-      type: object
-      properties:
-        arguments:
-          type: object
-          properties:
-            parameters:
-              type: array
-              items:
-                oneOf:
-                  - $ref: "#/components/schemas/Parameter"
-        entrypoint:
-          type: string
-        serviceAccountName:
-          type: string
-        templates:
-          type: array
-          items:
-            oneOf:
-              - $ref: "#/components/schemas/Template"
-    Run:
-      type: object
-      properties:
-        createdAt:
-          type: string
-          format: date-time
-        description:
-          type: string
-        error:
-          type: string
-        finishedAt:
-          type: string
-          format: date-time
-        id:
-          type: string
-          format: uuid
-        metrics:
-          type: array
-          items:
-            type: object
-            properties:
-              format:
-                type: string
-              name:
-                type: string
-              nodeId:
-                type: string
-              numberValue:
-                type: number
-        name:
-          type: string
-        pipelineSpec:
-          type: object
-          properties:
-            parameters:
-              type: array
-              items:
-                oneOf:
-                  - $ref: "#/components/schemas/Parameter"
-            pipelineId:
-              type: string
-            pipelineManifest:
-              type: string
-            pipelineName:
-              type: string
-            workflowManifest:
-              type: object
-              properties:
-                apiVersion:
-                  type: string
-                kind:
-                  type: string
-                metadata:
-                  type: object
-                  properties:
-                    creationTimestamp:
-                      type: string
-                      format: date-time
-                    generateName:
-                      type: string
-                spec:
-                  allOf:
-                    - $ref: "#/components/schemas/Spec"
-                status:
-                  type: object
-                  properties:
-                    finishedAt:
-                      type: string
-                      format: date-time
-                    startedAt:
-                      type: string
-                      format: date-time
-        resourceReferences:
-          type: array
-          items:
-            type: object
-            properties:
-              key:
-                type: object
-                properties:
-                  id:
-                    type: string
-                  type:
-                    type: string
-              name:
-                type: string
-              relationship:
-                type: string
-        scheduledAt:
-          type: string
         status:
-          type: string
-        storageState:
-          type: string
-    RunDetail:
-      type: object
-      properties:
-        pipelineRuntime:
           type: object
-          properties:
-            pipelineManifest:
-              type: string
-            workflowManifest:
-              type: object
-              properties:
-                apiVersion:
-                  type: string
-                kind:
-                  type: string
-                metadata:
-                  type: object
-                  properties:
-                    creationTimestamp:
-                      type: string
-                      format: date-time
-                    generateName:
-                      type: string
-                    generation:
-                      type: number
-                    labels:
-                      type: object
-                    name:
-                      type: string
-                    namespace:
-                      type: string
-                    resourceVersion:
-                      type: string
-                    selfLink:
-                      type: string
-                    uid:
-                      type: string
-            spec:
-              allOf:
-                - $ref: "#/components/schemas/Spec"
-            status:
-              type: object
-              properties:
-                finishedAt:
-                  type: string
-                  format: date-time
-                nodes:
-                  type: object
-                phase:
-                  type: string
-                startedAt:
-                  type: string
-                  format: date-time
-        run:
-          allOf:
-            - $ref: "#/components/schemas/Run"
-    Runs:
-      type: array
-      items:
-        oneOf:
-          - $ref: "#/components/schemas/Run"
+          additionalProperties:
+            type: string
+          example:
+            c9a4e6a05-a788-4efa-b94b-693e28608618: "Succeeded"
+            caadb1d13-0666-4d84-a365-356b258e4433: "Succeeded"
   requestBodies:
-    DeployPost:
+    DeploymentPost:
       content:
         application/json:
           schema:
@@ -409,7 +178,7 @@ components:
                 type: string
               target:
                 type: string
-    TrainPost:
+    TrainingPost:
       content:
         application/json:
           schema:
@@ -426,30 +195,30 @@ components:
               target:
                 type: string
   responses:
-    DeployLog:
+    DeploymentLog:
       description: ""
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/DeployLog"
+            $ref: "#/components/schemas/DeploymentLog"
     Run:
       description: ""
       content:
         application/json:
           schema:
             $ref: "#/components/schemas/Run"
-    RunDetail:
+    Deployments:
       description: ""
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/RunDetail"
-    Runs:
+            $ref: "#/components/schemas/Deployments"
+    TrainingStatus:
       description: ""
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/Runs"
+            $ref: "#/components/schemas/TrainingStatus"
     Message:
       description: ""
       content:
